--- a/content/Craven_publications.bib
+++ b/content/Craven_publications.bib
@@ -659,67 +659,72 @@ tex.publisher: National Academy of Sciences},
 	file = {Craven et al. - 2019 - Dissecting macroecological and macroevolutionary p.pdf:/media/dylan/Extreme SSD/Zotero/storage/PX3IN6A2/Craven et al. - 2019 - Dissecting macroecological and macroevolutionary p.pdf:application/pdf}
 }
 
-@article{sandelCurrentClimateIsolation2019,
+@article{sandelCurrentClimateIsolation2020,
 	title = {Current climate, isolation and history drive global patterns of tree phylogenetic endemism},
-	volume = {0},
+	volume = {29},
 	issn = {1466-822X},
 	url = {https://doi.org/10.1111/geb.13001},
 	doi = {10.1111/geb.13001},
 	abstract = {Abstract Aim We mapped global patterns of tree phylogenetic endemism ({PE}) to identify hotspots and test hypotheses about possible drivers. Specifically, we tested hypotheses related to current climate, geographical characteristics and historical conditions and assessed their relative importance in shaping {PE} patterns. Location Global. Time period We used the present distribution of trees, and predictors covering conditions from the mid-Miocene to present. Major taxa studied All seed-bearing trees. Methods We compiled distributions for 58,542 tree species across 463 regions worldwide, matched these to a recent phylogeny of seed plants and calculated {PE} for each region. We used a suite of predictor variables describing current climate (e.g., mean annual temperature), geographical characteristics (e.g., isolation) and historical conditions (e.g., tree cover at the Last Glacial Maximum) in a spatial regression model to explain variation in {PE}. Results Tree {PE} was highest on islands, and was higher closer to the equator. All three groups of predictor variables contributed substantially to the {PE} pattern. Isolation and topographic heterogeneity promoted high {PE}, as did high current tree cover. Among mainland regions, temperature seasonality was strongly negatively related to {PE}, while mean annual temperature was positively related to {PE} on islands. Some relationships differed among the major floristic regions. For example, tree cover at the Last Glacial Maximum was a positive predictor of {PE} in the Palaeotropics, while tree cover at the Miocene was a negative predictor of {PE} in the Neotropics. Main conclusions Globally, {PE} can be explained by a combination of geographical, historical and current factors. Some geographical variables appear to be key predictors of {PE}. However, the impact of historic and current climate variables differs considerably among the major floristic regions, reflecting their unique histories. Hence, the current distribution of trees is the result of globally relevant geographical drivers and regional climatic histories.},
-	number = {0},
+	pages = {4--15},
+	number = {1},
 	journaltitle = {Global Ecology and Biogeography},
 	shortjournal = {Global Ecology and Biogeography},
 	author = {Sandel, Brody and Weigelt, Patrick and Kreft, Holger and Keppel, Gunnar and van der Sande, Masha T. and Levin, Sam and Smith, Stephen and Craven, Dylan and Knight, Tiffany M.},
-	urldate = {2019-09-03},
-	date = {2019-09-02},
+	urldate = {2019-12-02},
+	date = {2020-01-01},
+	note = {Citation Key Alias: {sandelCurrentClimateIsolation}2019},
 	keywords = {trees, historical contingency, islands, isolation, biogeography, phylogenetic endemism, climate stability},
 	file = {Sandel et al. - 2019 - Current climate, isolation and history drive globa.pdf:/media/dylan/Extreme SSD/Zotero/storage/FTIBWXG5/Sandel et al. - 2019 - Current climate, isolation and history drive globa.pdf:application/pdf}
 }
 
-@article{Craven769232,
-	title = {A cross-scale assessment of productivity-diversity relationships},
-	url = {https://www.biorxiv.org/content/early/2019/09/14/769232},
-	doi = {10.1101/769232},
-	abstract = {Biodiversity and ecosystem productivity vary across the globe and considerable effort has been made to describe their relationships. Biodiversity-ecosystem functioning research has traditionally focused on how experimentally controlled species richness affects net primary productivity (S→{NPP}) at small spatial grains. In contrast, the influence of productivity on richness ({NPP}→S) has been explored at many grains in naturally assembled communities. Mismatches in spatial scale between approaches have fostered debate about the strength and direction of biodiversity-productivity relationships. Here we examine the direction and strength of productivitys influence on diversity ({NPP}→S) and of diversitys influence on productivity (S→{NPP}), and how this varies across spatial grains using data from North American forests at grains from local (672 m2) to coarse spatial units (median area = 35,677 km2). We assess relationships using structural equation and Random Forest models, while accounting for variation in climate, environmental heterogeneity, management, and forest age. We show that relationships between S and {NPP} strengthen with spatial grain. Within each grain, S→{NPP} and {NPP}→S have similar magnitudes, meaning that processes underlying S→{NPP} and {NPP}→S either operate simultaneously, or that one of them is real and the other is an artifact. At all spatial grains, S was one of the weakest predictors of forest productivity, which was largely driven by biomass, temperature, and forest management and age. We conclude that spatial grain mediates relationships between biodiversity and productivity in real-world ecosystems and that results supporting predictions from each approach ({NPP}→S and S→{NPP}) serve as an impetus for future studies testing underlying mechanisms.},
-	journaltitle = {{bioRxiv}},
-	author = {Craven, Dylan and van der Sande, Masha and Meyer, Carsten and Gerstner, Katharina and Bennett, Joanne M and Giling, Darren P and Hines, Jes and Phillips, Helen R P and May, Felix and Bannar-Martin, Katherine and Chase, Jonathan and Keil, Petr},
-	date = {2019},
-	note = {tex.elocation-id: 769232
-tex.eprint: https://www.biorxiv.org/content/early/2019/09/14/769232.full.pdf
-tex.publisher: Cold Spring Harbor Laboratory},
-	file = {Craven et al. - 2019 - A cross-scale assessment of productivity-diversity.pdf:/media/dylan/Extreme SSD/Zotero/storage/7QBLFHVW/Craven et al. - 2019 - A cross-scale assessment of productivity-diversity.pdf:application/pdf}
-}
-
-@article{guzman-jacobEffectsForestuseIntensity2019,
+@article{guzman-jacobEffectsForestuseIntensity2020,
 	title = {Effects of forest-use intensity on vascular epiphyte diversity along an elevational gradient},
-	volume = {0},
-	rights = {© 2019 The Authors. Diversity and Distributions published by John Wiley \& Sons Ltd},
-	issn = {1472-4642},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ddi.12992},
+	volume = {26},
+	issn = {1366-9516},
+	url = {https://doi.org/10.1111/ddi.12992},
 	doi = {10.1111/ddi.12992},
-	abstract = {Aim Understanding patterns of tropical plant diversity and their vulnerability to anthropogenic disturbance at different spatial scales remains a great challenge in ecology and conservation. Here, we study how the effects of forest-use intensity on vascular epiphyte diversity vary along a tropical elevational gradient. Location 3,500-m elevational gradient along the eastern slopes of Cofre de Perote, Mexico. Methods We studied the effects of forest-use intensity on alpha, beta and gamma diversity of vascular epiphyte assemblages in old-growth, degraded and secondary forests at eight study sites at 500-m intervals along the elevational gradient. At each elevation and in each of the three forest-use intensity levels, we established five 400-m2 plots yielding a total of 120 plots. Results Interactive effects of elevation and forest-use intensity strongly impacted local-scale patterns of vascular epiphyte diversity. Species diversity peaked at 500 as well as 1,500 m above sea level, which deviates from the previously reported hump-shaped pattern. In most cases, alpha diversity did not differ significantly among forest-use intensity levels. However, gamma diversity was always lower in secondary forests compared to old-growth forests across the entire elevational gradient. Within each elevational belt, beta diversity was dominated by species turnover along the forest-use intensity gradient in the lowlands and declined with increasing elevation, where community composition became increasingly nested. Along the elevational gradient, the spatial turnover of vascular epiphyte community composition was similar among forest-use intensity levels. Main conclusions Our results reveal a strong interaction between forest-use intensity and elevation, making it difficult to extrapolate findings from one elevational belt to another. Our findings highlight the value of old-growth forest for epiphyte diversity, but also show that degraded and secondary forests—depending on the elevational belt—may maintain a high species diversity and thus play an important role in conservation planning.},
-	number = {0},
+	abstract = {Abstract Aim Understanding patterns of tropical plant diversity and their vulnerability to anthropogenic disturbance at different spatial scales remains a great challenge in ecology and conservation. Here, we study how the effects of forest-use intensity on vascular epiphyte diversity vary along a tropical elevational gradient. Location 3,500-m elevational gradient along the eastern slopes of Cofre de Perote, Mexico. Methods We studied the effects of forest-use intensity on alpha, beta and gamma diversity of vascular epiphyte assemblages in old-growth, degraded and secondary forests at eight study sites at 500-m intervals along the elevational gradient. At each elevation and in each of the three forest-use intensity levels, we established five 400-m2 plots yielding a total of 120 plots. Results Interactive effects of elevation and forest-use intensity strongly impacted local-scale patterns of vascular epiphyte diversity. Species diversity peaked at 500 as well as 1,500 m above sea level, which deviates from the previously reported hump-shaped pattern. In most cases, alpha diversity did not differ significantly among forest-use intensity levels. However, gamma diversity was always lower in secondary forests compared to old-growth forests across the entire elevational gradient. Within each elevational belt, beta diversity was dominated by species turnover along the forest-use intensity gradient in the lowlands and declined with increasing elevation, where community composition became increasingly nested. Along the elevational gradient, the spatial turnover of vascular epiphyte community composition was similar among forest-use intensity levels. Main conclusions Our results reveal a strong interaction between forest-use intensity and elevation, making it difficult to extrapolate findings from one elevational belt to another. Our findings highlight the value of old-growth forest for epiphyte diversity, but also show that degraded and secondary forests?depending on the elevational belt?may maintain a high species diversity and thus play an important role in conservation planning.},
+	pages = {4--15},
+	number = {1},
 	journaltitle = {Diversity and Distributions},
-	author = {Guzmán‐Jacob, Valeria and Zotz, Gerhard and Craven, Dylan and Taylor, Amanda and Krömer, Thorsten and Monge‐González, María Leticia and Kreft, Holger},
-	urldate = {2019-10-07},
-	date = {2019},
-	langid = {english},
+	shortjournal = {Diversity and Distributions},
+	author = {Guzmán-Jacob, Valeria and Zotz, Gerhard and Craven, Dylan and Taylor, Amanda and Krömer, Thorsten and Monge-González, María Leticia and Kreft, Holger},
+	urldate = {2019-12-02},
+	date = {2020-01-01},
+	note = {Citation Key Alias: guzman-{jacobEffectsForestuseIntensity}2019},
 	keywords = {species richness, disturbance, composition, elevation, beta diversity, ferns, bromeliads, forest-use, orchids, tropical vegetation},
-	file = {Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:/media/dylan/Extreme SSD/Zotero/storage/Y4S2E3P8/Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/PM9R5LVZ/ddi.html:text/html}
+	file = {Full Text:/media/dylan/Extreme SSD/Zotero/storage/JDVXWZR5/Guzmán-Jacob et al. - 2020 - Effects of forest-use intensity on vascular epiphy.pdf:application/pdf;Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:/media/dylan/Extreme SSD/Zotero/storage/Y4S2E3P8/Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/PM9R5LVZ/ddi.html:text/html}
 }
 
-@article{monge-gonzalezResponseTreeDiversity2019,
-	title = {Response of tree diversity and community composition to forest-use intensity along a tropical elevational gradient},
-	rights = {© 2019 International Association for Vegetation Science},
-	issn = {1654-109X},
+@article{doi:10.1111/avsc.12465,
+	title = {Response of tree diversity and community composition to forest use intensity along a tropical elevational gradient},
+	volume = {n/a},
 	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/avsc.12465},
 	doi = {10.1111/avsc.12465},
-	abstract = {Question Land-use change and intensification are currently the most pervasive threats to tropical biodiversity. Yet, their effects on biodiversity change with elevation is unknown. Here we examine how tree diversity and community composition vary with elevation and how the effects of forest-use intensity on tree diversity and community composition change within elevations. Location Eastern slopes of the Cofre de Perote mountain, state of Veracruz, Mexico. Methods We assessed tree diversity and composition using a sampling design in which elevation was crossed with three levels of forest-use intensity: old-growth, degraded, and secondary forests. We established 120 20 x 20 m forest plots, located at eight sites between 0 and 3545 m. At each site, five replicate plots were inventoried for each level of forest-use intensity. Results Our analyses revealed an interactive effect between elevation and forest-use intensity affecting tree diversity and community composition along the elevational gradient. Contrasting effects of forest-use intensity within elevation resulted in tree diversity following a low-plateau pattern for old-growth and a bimodal pattern for degraded and secondary forests. Along the entire elevational gradient, 217 tree species distributed within 154 genera and 80 families. Species accumulation curves revealed that forests at 0 and 1500 m elevation showed differences in species richness among forest-use intensities. In contrast, species richness did not differ between old-growth forest and the other forest-use intensities in five of the eight studied elevations. In terms of community composition, secondary forests differed from old-growth and degraded forests. Conclusion Our results suggest that the interactive effects of elevation and forest-use intensity change tree diversity patterns and community composition along a tropical elevational gradient. Degraded forests were similar to old-growth forests in terms of species diversity and composition, suggesting that they may act as a safeguard of tree diversity in human-dominated tropical landscapes.},
+	abstract = {Abstract Question Land-use change and intensification are currently the most pervasive threats to tropical biodiversity. Yet, their effects on biodiversity change with elevation are unknown. Here, we examine how tree diversity and community composition vary with elevation and how the effects of forest use intensity on tree diversity and community composition change within elevations. Location Eastern slopes of the Cofre de Perote mountain, state of Veracruz, Mexico. Methods We assessed tree diversity and composition using a sampling design in which elevation was crossed with three levels of forest use intensity: old-growth, degraded, and secondary forests. We established 120 20 m × 20 m forest plots, located at eight sites between 0 m and 3,545 m. At each site, five replicate plots were inventoried for each level of forest use intensity. Results Our analyses revealed an interactive effect between elevation and forest use intensity affecting tree diversity and community composition along the elevational gradient. Contrasting effects of forest use intensity within elevation resulted in tree diversity following a low-plateau pattern for old-growth and a bimodal pattern for degraded and secondary forests. Along the entire elevational gradient, there were 217 tree species distributed within 154 genera and 80 families. Species accumulation curves revealed that forests at 0 m and 1,500 m elevation showed differences in species richness among forest use intensities. In contrast, species richness did not differ between old-growth forest and the other forest use intensities in five of the eight studied elevations. In terms of community composition, secondary forests differed from old-growth and degraded forests. Conclusion Our results suggest that the interactive effects of elevation and forest use intensity change tree diversity patterns and community composition along a tropical elevational gradient. Degraded forests were similar to old-growth forests in terms of species diversity and composition, suggesting that they may act as a safeguard of tree diversity in human-dominated tropical landscapes.},
+	issue = {n/a},
 	journaltitle = {Applied Vegetation Science},
-	author = {Monge‐González, María Leticia and Craven, Dylan and Krömer, Thorsten and Castillo‐Campos, Gonzalo and Hernández‐Sánchez, Alejandro and Guzmán‐Jacob, Valeria and Guerrero‐Ramírez, Nathaly and Kreft, Holger},
-	urldate = {2019-11-11},
-	date = {2019},
-	langid = {english},
-	keywords = {Mexico, Secondary forest, Degraded forest, Elevational gradient, Land-use, Old-growth forest, Tropical montane forest},
-	file = {Full Text PDF:/media/dylan/Extreme SSD/Zotero/storage/7Y3H96MD/Monge‐González et al. - Response of tree diversity and community compositi.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/QGZJGKMB/avsc.html:text/html}
+	author = {Monge-González, María Leticia and Craven, Dylan and Krömer, Thorsten and Castillo-Campos, Gonzalo and Hernández-Sánchez, Alejandro and Guzmán-Jacob, Valeria and Guerrero-Ramírez, Nathaly and Kreft, Holger},
+	date = {2020},
+	note = {Citation Key Alias: monge-{gonzalezResponseTreeDiversity}2019
+tex.eprint: [object Object]},
+	keywords = {land use, Mexico, secondary forest, elevational gradient, Secondary forest, old-growth forest, Degraded forest, Elevational gradient, Land-use, Old-growth forest, Tropical montane forest, degraded forest, tropical montane forest},
+	file = {Monge-González et al. - Response of tree diversity and community compositi.pdf:/media/dylan/Extreme SSD/Zotero/storage/QL6MWVQ3/Monge-González et al. - Response of tree diversity and community compositi.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/QGZJGKMB/avsc.html:text/html}
+}
+
+@article{10.1371/journal.pone.0226474,
+	title = {Successional, spatial, and seasonal changes in seed rain in the Atlantic forest of southern Bahia, Brazil},
+	volume = {14},
+	rights = {All rights reserved},
+	url = {https://doi.org/10.1371/journal.pone.0226474},
+	doi = {10.1371/journal.pone.0226474},
+	abstract = {Seed arrival is a limiting factor for the regeneration of diverse tropical forests and may be an important mechanism that drives patterns of tree species’ distribution. Here we quantify spatial and seasonal variation in seed rain of secondary forests in southern Bahia, Brazil. We also examine whether secondary forest age enhances seed dispersal and whether seed rain density and diversity in secondary forests decay with distance from mature forest. Across a chronosequence of 15 pairs of mature and secondary forests, 105 seed traps were installed and monitored for one year. We tested the effects of secondary forest age, distance from mature forest, and seasonality on monthly seed rain density, diversity, seed dispersal mode, and diaspore size. We found that secondary forest age had strong, positive effects on the diversity of seed rain, which was generally higher during the wet season. Moreover, contrasting patterns among diversity indices revealed that seeds of rare species occurred more often in 40 yr old secondary forests and mature forests. While the proportion of biotically and abiotically dispersed seeds did not change significantly with distance from mature forest across all forest age classes, we found that biotically dispersed seeds contributed disproportionately more to seed rain diversity. Our results emphasize the importance of biotic dispersal to enhance diversity during secondary succession and suggest that changes in secondary forest structure have the potential to enhance the diversity of tropical secondary forests, principally by increasing dispersal of rare species.},
+	pages = {1--15},
+	number = {12},
+	journaltitle = {{PLOS} {ONE}},
+	author = {Piotto, Daniel and Craven, Dylan and Montagnini, Florencia and Ashton, Mark and Oliver, Chadwick and Thomas, William Wayt},
+	date = {2019-12},
+	note = {tex.publisher: Public Library of Science},
+	file = {Full Text:/media/dylan/Extreme SSD/Zotero/storage/FU435LEQ/Piotto et al. - 2019 - Successional, spatial, and seasonal changes in see.pdf:application/pdf}
 }
